# rag-assets

./: .gitignore  README.md  pyproject.toml
example_notebooks/: basic_rag_pipeline_usage.ipynb  chat_image_usage.ipynb  multimodal_rag_pipeline_usage.ipynb  parent_child_rag_pipeline_usage.ipynb  query_decomposition_rag_pipeline_usage.ipynb  rag_fusion_pipeline_usage.ipynb  reranker_rag_pipeline_usage.ipynb
prompts/: rag_prompts.py
rag_pipelines/: README.md
rag_pipelines/basic_rag/: __init__.py  basic_rag.py  config.yaml
rag_pipelines/docling_rag/: __init__.py  config.yaml  config_schema.py  docling_multimodal_rag.py  docling_multimodal_reader.py
rag_pipelines/multimodal/: __init__.py  config.yaml  config_schema.py  multimodal_pdf_reader.py  multimodal_rag.py
rag_pipelines/parent_child_rag/: __init__.py  config.yaml  config_schema.py  parent_child_rag.py
rag_pipelines/query_decomposition/: __init__.py  config.yaml  config_schema.py  query_decomposition_rag.py
rag_pipelines/rag_fusion/: __init__.py  config.yaml  rag_fusion.py
rag_pipelines/reranker_rag/: __init__.py  config.yaml  config_schema.py  rag_with_reranker.py
services/: README.md  groq.py
services/retrievers/: parent_child_retriever_chroma.py  parent_child_retriever_es.py  parent_child_retriever_milvus.py  retriever_chroma.py  retriever_es.py  retriever_milvus.py
utils/: README.md  chat_image.py  file_readers.py  rate_limiter.py
utils/rerankers/: colbert.py  cross_encoder.py
utils/tools/: code_interpreter.py
